nearByndng discerns RNA structure at and proximal to sites of protein binding.
The most recent version is available on GitHub
(https://github.com/vbusa1/nearBynding). If you have any questions or comments,
please contact Veronica Busa <vbusa1@jhmi.edu>.

## nearBynding 0.99.7 (08-23-2020)

### edits for Bioconductor review

* re-generate NAMESPACE via Roxygen
* replace /dontrun with /donttest in vignette
* add data types to man pages