@@ -11,19 +11,17 @@
 #' potentially more accurate results but dramatically increasing run time.
 #' Default 100.
 #'
-#'@return generates CapR outfile
+#' @return generates CapR outfile
 #'
-#'@examples
+#' @examples
 #'
-#'## make dummy file
-#'write_fasta(paste0(sample(c("A", "T", "G", "C"), 50, replace = TRUE),
+#' ## make dummy file
+#' write_fasta(paste0(sample(c("A", "T", "G", "C"), 50, replace = TRUE),
 #'                   collapse = ""),
 #'            "test",
 #'            "test.fa")
-#'## run CapR
-#'\donttest{
-#'    runCapR("test.fa")
-#'}
+#' ## run CapR
+#' runCapR("test.fa")
 #'
 #' @export
 
@@ -33,5 +31,7 @@ runCapR <- function(in_file,
     if (is.na(out_file)) {
         out_file <- paste0(substr(in_file, 0, nchar(in_file) - 2), "out")
     }
-    system2("CapR", args = c(in_file, out_file, max_dist))
+    if(.is_CapR_installed()){
+        .CapR_run(in_file, out_file, max_dist)
+    }else{return("Please install CapR and place in working PATH")}
 }
