@@ -30,14 +30,14 @@
 #'
 #' @examples
 #' ## pull example files
-#'get_outfiles()
-#'## heatmap
-#'visualizeStereogene(context_file = "chr4and5_3UTR_stem_liftOver",
+#' get_outfiles()
+#' ## heatmap
+#' visualizeStereogene(context_file = "chr4and5_3UTR_stem_liftOver",
 #'                    protein_file = "chr4and5_liftOver",
 #'                    out_file = "stem_heatmap",
 #'                    x_lim = c(-500, 500))
-#'## line graph
-#'visualizeStereogene(context_file = "chr4and5_3UTR_stem_liftOver",
+#' ## line graph
+#' visualizeStereogene(context_file = "chr4and5_3UTR_stem_liftOver",
 #'                    protein_file = "chr4and5_liftOver",
 #'                    heatmap = TRUE,
 #'                    out_file = "stem_line",
