@@ -26,10 +26,11 @@ Writes a script to convert a BAM file to a clean bedGraph file.
 bam <- system.file("extdata/chr4and5.bam", package="nearBynding")
 #sort BAM first
 sorted_bam<-Rsamtools::sortBam(bam, "chr4and5_sorted")
-\donttest{
-    CleanBAMtoBG(in_bam = sorted_bam)
+CleanBAMtoBG(in_bam = sorted_bam)
 
+\dontrun{
     ## If BAM has unwanted chromosome "EBV"
+    ## this file is from ENCODE database
     CleanBAMtoBG(in_bam = "ENCFF288LEG.bam",
                  unwanted_chromosomes = "EBV")
 }
