@@ -33,11 +33,11 @@ Writes a script to convert a BED file to a clean bedGraph file.
 \examples{
 bam <- system.file("extdata/chr4and5.bam", package="nearBynding")
 out_bed <- "bamto.bed"
-\donttest{
-    system2("bedtools", paste0("bamtobed -i ", bam, " > ", out_bed))
-
-    CleanBEDtoBG(in_bed = out_bed,
-                 alignment = "hg38")
+if(.is_bedtools_installed()){
+    .bedtools_run(paste0("bamtobed -i ", bam, " > ", out_bed))
 }
+CleanBEDtoBG(in_bed = out_bed,
+    alignment = "hg38")
+
 
 }
