@@ -44,12 +44,10 @@ transcript_list, genome_gtf, and RNA_fragment arguments should be the
 same as GenomeMappingToChainFile function arguments
 }
 \examples{
-\donttest{
 ExtractTranscriptomeSequence(transcript_list = transcript_list,
              ref_genome = "Homo_sapiens.GRCh38.dna.primary_assembly.fa",
              genome_gtf = gtf,
              RNA_fragment = "three_prime_utr",
              exome_prefix = "chr4and5_3UTR")
-}
 
 }
