@@ -26,10 +26,8 @@ generates StereoGene output files in directory
 Writes a StereoGene script in the working directory
 }
 \examples{
-\donttest{
 runStereogene(track_files = c("chr4and5_3UTR_stem_liftOver.bedGraph",
                              "chr4and5_liftOver.bedGraph"),
              name_config = "chr4and5_3UTR.cfg")
-}
 
 }
